chore : 기타 리팩토링 (#813)